Update StoreService.java